# python-aviationstack

./: AI_CHAT_HISTORY.md  README.md  REPORT.md  pyproject.toml  requirements.txt
claude/: main.py
claude/api/: aviationstack.py
claude/commands/: airline.py  airport.py  flight.py  help.py  history.py  watch.py
claude/db/: database.py
claude/utils/: display.py  formatter.py
openai_edition/: main.py
openai_edition/api/: aviationstack.py
openai_edition/commands/: airline.py  airport.py  flight.py  history.py  watch.py
openai_edition/db/: database.py
openai_edition/tests/: conftest.py  test_aviationstack_live.py  test_aviationstack_unit.py  test_cli.py  test_database.py  test_formatter.py
openai_edition/utils/: display.py  formatter.py
